# hid-bench

./: Cargo.toml
hid-bench/: Cargo.toml
hid-bench/src/: main.rs
hid-parser/: Cargo.toml
hid-parser/src/: collection.rs  descriptor.rs  input.rs  lib.rs  parser.rs  report.rs  rusb.rs
hid-parser/src/snapshots/: hid_bench__hid__basic__test__parses_basic_report_descriptor_items.snap  hid_bench__hid__parser__test__parses_a_report_descriptor.snap
src/: hid.rs  main.rs
src/hid/: basic.rs  collection.rs  input.rs  parser.rs  report.rs
src/hid/snapshots/: hid_bench__hid__parser__test__parses_an_input_report.snap
