[package]
name = "hid-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
anyhow = "1.0.66"
rusb = "0.9.1"
hidapi = "1.4.2"
hid-parser = { version = "0.1", path = "../hid-parser", features = ["rusb"] }
