[package]
name = "hid-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rusb = "0.9.1"
hidapi = "1.4.2"
clap = { version = "4.0.26", features = ["derive"] }
anyhow = "1.0.66"

[dev-dependencies]
insta = "1.21.1"
