[package]
name = "hid-parser"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.66"
rusb = { version = "0.9.1", optional = true }

[dev-dependencies]
insta = "1.21.1"

[features]
rusb = ["dep:rusb"]
